fix more small resizeable+draggable+scrolling bugs

--- a/example.html
+++ b/example.html
@@ -28,6 +28,7 @@ $(document).ready(function() {
 		white-space: nowrap;
 		width: 700px;
 		float: left;
+		position: relative;
 	}
 	
 	.jqgant_cell {
@@ -36,7 +37,8 @@ $(document).ready(function() {
 		border-width: 1px;
 		border-style: dotted; 
 		border-color: #999;
-		display: inline-block;		
+		display: inline-block;
+		position: relative;		
 	}
 
 	.jqgant_week_label {
@@ -58,6 +60,8 @@ $(document).ready(function() {
 		height: 18px;
 		min-height: 18px;
 		max-height: 18px;
+		position: relative;
+		z-index: 5;
 	}
 
 
