create add_task public method

--- a/example.html
+++ b/example.html
@@ -18,7 +18,10 @@ $(document).ready(function() {
 
     // get the value of a property
     //$('#element').data('pluginName').settings.foo;
-
+    $("#addtask").click( function() {
+	$("#chartdiv").data('jqgant').add_task( { "name":"new task", "duration":"2 days", "start_date":"7/29/12", "end_date":"8/2/12"});
+	return false;
+    });
 });
 </script>
 <style>
@@ -95,7 +98,8 @@ $(document).ready(function() {
 		<div id="chartdiv">
 
 		</div>
-
+		<br /><br />
+		<a href="#" id="addtask">add task</a>
 	</body>
 
 </html>
