extract styles into a stylesheet

--- a/example.html
+++ b/example.html
@@ -7,6 +7,9 @@
 		<script src="jquery.jqgant.js"></script>
 		
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/flick/jquery-ui.css" type="text/css">
+		<link rel="stylesheet" href="jqgant.css" type="text/css">
+		
+	
 		<script>
 $(document).ready(function() {
 
@@ -29,72 +32,6 @@ $(document).ready(function() {
  });
 });
 </script>
-<style>
-	.cellcontainer {
-		overflow-x: scroll;
-		overflow-y: hidden;
-		white-space: nowrap;
-		width: 700px;
-		float: left;
-		position: relative;
-	}
-	
-	.jqgant_cell {
-		width: 20px;
-		height: 20px;
-		border-width: 1px;
-		border-style: solid; 
-		border-color: #ddd;
-		display: inline-block;
-		position: relative;		
-	}
-
-	.jqgant_week_label {
-		height: 20px;
-		width: 108px;
-		border-width: 1px;
-		border-style: solid;
-		border-color: #ddd;
-		display: inline-block;
-	}
-
-	#jqgant_task_table {
-		float: left;
-		margin-top: 20px;
-	
-		border-top: 1px solid #ddd;
-		border-spacing: 0;
-	
-	}
-
-	#jqgant_task_table td,
-        #jqgant_task_table th {
-
-		border: 1px solid #ddd;
-		padding-left: 2px;
-		padding-right: 5px;
-
-	}
-
-
-	.taskbar {
-		height: 18px;
-		min-height: 18px;
-		max-height: 18px;
-		position: relative;
-		z-index: 5;
-	}
-
-	.jqgantdiv {
-	
-		Font-family: Calibri, sans-serif;
-		font-size: normal;
-	
-	}
-
-
-</style>
-
 		
 	</head>
 
