--- a/example.html
+++ b/example.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
     // get the value of a property
     //$('#element').data('pluginName').settings.foo;
     $("#addtask").click( function() {
-	$("#chartdiv").data('jqgant').add_task( { "name":"new task", "duration":"2 days", "start_date":"7/27/12", "end_date":"8/2/12"});
+	$("#chartdiv").data('jqgant').add_task( { "name":"new task", "duration":"2 days", "start_date":"07/27/2012", "end_date":"08/2/2012", "pct_completion":0});
 	return false;
 });
 
